--- a/chess/index.html
+++ b/chess/index.html
@@ -9,6 +9,29 @@
 
 <body>
     <table>
+        <!-- Row 1: Black Pieces -->
+        <tr>
+            <td id="black">&#9820;</td>
+            <td id="white">&#9822;</td>
+            <td id="black">&#9821;</td>
+            <td id="white">&#9819;</td>
+            <td id="black">&#9818;</td>
+            <td id="white">&#9821;</td>
+            <td id="black">&#9822;</td>
+            <td id="white">&#9820;</td>
+        </tr>
+        <!-- Row 2: Black Pawns -->
+        <tr>
+            <td id="white">&#9823;</td>
+            <td id="black">&#9823;</td>
+            <td id="white">&#9823;</td>
+            <td id="black">&#9823;</td>
+            <td id="white">&#9823;</td>
+            <td id="black">&#9823;</td>
+            <td id="white">&#9823;</td>
+            <td id="black">&#9823;</td>
+        </tr>
+        <!-- Rows 3-6: Empty Squares -->
         <tr>
             <td id="black"></td>
             <td id="white"></td>
@@ -20,49 +43,6 @@
             <td id="white"></td>
         </tr>
         <tr>
-
-            <td id="white"></td>
-            <td id="black"></td>
-            <td id="white"></td>
-            <td id="black"></td>
-            <td id="white"></td>
-            <td id="black"></td>
-            <td id="white"></td>
-            <td id="black"></td>
-        </tr>
-        <tr>
-            <td id="black"></td>
-            <td id="white"></td>
-            <td id="black"></td>
-            <td id="white"></td>
-            <td id="black"></td>
-            <td id="white"></td>
-            <td id="black"></td>
-            <td id="white"></td>
-        </tr>
-        <tr>
-
-            <td id="white"></td>
-            <td id="black"></td>
-            <td id="white"></td>
-            <td id="black"></td>
-            <td id="white"></td>
-            <td id="black"></td>
-            <td id="white"></td>
-            <td id="black"></td>
-        </tr>
-        <tr>
-            <td id="black"></td>
-            <td id="white"></td>
-            <td id="black"></td>
-            <td id="white"></td>
-            <td id="black"></td>
-            <td id="white"></td>
-            <td id="black"></td>
-            <td id="white"></td>
-        </tr>
-        <tr>
-
             <td id="white"></td>
             <td id="black"></td>
             <td id="white"></td>
@@ -83,7 +63,6 @@
             <td id="white"></td>
         </tr>
         <tr>
-
             <td id="white"></td>
             <td id="black"></td>
             <td id="white"></td>
@@ -92,9 +71,30 @@
             <td id="black"></td>
             <td id="white"></td>
             <td id="black"></td>
+        </tr>
+        <!-- Row 7: White Pawns -->
+        <tr>
+            <td id="black">&#9817;</td>
+            <td id="white">&#9817;</td>
+            <td id="black">&#9817;</td>
+            <td id="white">&#9817;</td>
+            <td id="black">&#9817;</td>
+            <td id="white">&#9817;</td>
+            <td id="black">&#9817;</td>
+            <td id="white">&#9817;</td>
+        </tr>
+        <!-- Row 8: White Pieces -->
+        <tr>
+            <td id="white">&#9814;</td>
+            <td id="black">&#9816;</td>
+            <td id="white">&#9815;</td>
+            <td id="black">&#9813;</td>
+            <td id="white">&#9812;</td>
+            <td id="black">&#9815;</td>
+            <td id="white">&#9816;</td>
+            <td id="black">&#9814;</td>
         </tr>
     </table>
-
 </body>
 
 </html>
