--- a/Loginpage/index.html
+++ b/Loginpage/index.html
@@ -18,7 +18,8 @@
             </div>
             <div class="input-group">
                 <label for="password">Password:</label>
-                <input type="password" id="password" name="password" placeholder="Enter Password" required>
+                <input type="password" id="password" name="password" placeholder="Enter Password" minlength="8"
+                    required>
             </div>
             <div class="input-group">
                 <button type="submit">Login</button>
